--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -1,3 +1,34 @@
-.intro__text {
+.landing {
     display: flex;
+    flex-direction: column;
+    background-color: red;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height:100vh;
+}
+
+.landing__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.welcome__header {
+    margin-bottom: 0;
+}
+
+.welcome__subheading {
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0;
+    text-align: center;
+}
+
+.button__group {
+    display: flex;
+    width: auto;
+    margin: 0 5%;
 }
