center button group formatting

--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -29,6 +29,8 @@
 
 .button__group {
     display: flex;
-    width: auto;
-    margin: 0 5%;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 75%;
+    margin: 0 10%;
 }
