fix height of landing page and button padding

--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -5,7 +5,8 @@
     align-items: center;
     justify-content: center;
     width: auto;
-    height:100vh;
+    margin-top: 10%;
+    /* height:100vh; */
 }
 
 .landing__text {
@@ -33,4 +34,5 @@
     justify-content: space-evenly;
     width: 75%;
     margin: 0 10%;
+    padding-top: 2%;
 }
