--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -1,6 +1,9 @@
 .header {
-    display: fixed;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .app__title {
@@ -9,4 +12,18 @@
 
 .app__subtitle {
     margin-top: 0;
+}
+
+.input__buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+}
+
+.months {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
